--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -3,7 +3,7 @@
 .logo{
   max-width: 1170px;
   width: 100%;
-  margin: 0px auto;
+  margin: 0 auto;
 
   &__header{
     font-family: 'Quicksand',sans-serif;
@@ -31,7 +31,7 @@
 .services{
   max-width: 1170px;
   width: 100%;
-  margin: 0px auto;
+  margin: 0 auto;
   padding-top: 100px;
   padding-bottom: 100px;
   &__about{
